--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "ember-data": "1.0.0-beta.17",
     "ember-disable-proxy-controllers": "^0.7.0",
     "ember-export-application-global": "^1.0.2",
-    "ember-cli-simple-auth": "~0.8.0"
+    "ember-cli-simple-auth": "~0.8.0",
+    "ember-cli-simple-auth-devise": "~0.8.0"
   }
 }
