--- a/api/Gemfile
+++ b/api/Gemfile
@@ -3,38 +3,25 @@ source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 # Use SCSS for stylesheets
-gem 'sinatra'
-gem "activerecord"
-gem "rake"
-gem "sinatra-activerecord"
-gem "shotgun"
-gem "sinatra-flash"
-gem "bcrypt"
-gem "slim"
-gem "warden"
+gem "rails"
+gem "devise"
+gem 'ember-cli-rails'
 
-# gem 'sass-rails', '~> 5.0'
+gem "guard-livereload"
+gem "guard"
+gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
-# Use CoffeeScript for .coffee assets and views
-# gem 'coffee-rails', '~> 4.1.0'
-# See https://github.com/sstephenson/execjs#readme for more supported runtimes
-# gem 'therubyracer', platforms: :ruby
+gem 'grape'
 
 # Use jquery as the JavaScript library
-# gem 'jquery-rails'
-# Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
-# gem 'turbolinks'
-# Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
-gem 'jbuilder', '~> 2.0'
+gem 'jquery-rails'
+
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
 
-gem 'will_paginate'
-# gem 'anjlab-bootstrap-rails', :require => 'bootstrap-rails',
-#                               :github => 'anjlab/bootstrap-rails'
-# gem "font-awesome-rails"
-# gem 'slim-rails'
+gem "font-awesome-rails"
+gem 'slim-rails', '~> 3.0'
 gem 'paper_trail'
 
 gem 'pg'
@@ -43,12 +30,7 @@ gem 'thin'
 gem 'cancancan'
 gem 'progress_bar'
 
-# gem 'twitter-bootstrap-rails'
-# gem "therubyracer"
 gem 'friendly_id', '>= 5.0'
-
-# Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
@@ -65,6 +47,7 @@ group :development, :test do
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
+
   gem 'pry'
 end
 
