--- a/api/Gemfile
+++ b/api/Gemfile
@@ -13,6 +13,8 @@ gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 gem 'grape'
+gem 'grape-active_model_serializers'
+gem 'grape-entity'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
