--- a/api/Gemfile
+++ b/api/Gemfile
@@ -12,7 +12,7 @@ gem "guard"
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
-gem 'grape'
+gem "grape", "~> 0.9"
 gem 'grape-active_model_serializers'
 gem 'grape-entity'
 
