--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,5 +38,8 @@
     "ember-disable-proxy-controllers": "^0.7.0",
     "ember-export-application-global": "^1.0.2",
     "ember-validations": "2.0.0-alpha.3"
+  },
+  "dependencies": {
+    "rails-csrf": "~2.0.1"
   }
 }
