--- a/api/Gemfile
+++ b/api/Gemfile
@@ -14,7 +14,7 @@ gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
 gem "grape", "~> 0.12"
 gem 'grape-active_model_serializers'
-gem 'grape-entity'
+gem 'grape-entity', github: 'intridea/grape-entity'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
