returned right json
need to transform json for relations

--- a/api/Gemfile
+++ b/api/Gemfile
@@ -5,7 +5,7 @@ source 'https://rubygems.org'
 # Use SCSS for stylesheets
 gem "rails"
 gem "devise"
-gem 'ember-cli-rails'
+gem 'ember-cli-rails', '>= 0.3.4'
 
 gem "guard-livereload"
 gem "guard"
