--- a/api/Gemfile
+++ b/api/Gemfile
@@ -5,10 +5,11 @@ source 'https://rubygems.org'
 # Use SCSS for stylesheets
 gem "rails"
 gem "devise"
-gem 'ember-cli-rails', '>= 0.3.4'
 
-gem "guard-livereload"
-gem "guard"
+#NOTE I am not sure about this
+# gem "guard-livereload"
+# gem "guard"
+
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
