--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,14 +30,13 @@
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "~1.3.0",
     "ember-cli-qunit": "0.3.13",
-    "ember-cli-simple-auth": "~0.8.0",
-    "ember-cli-simple-auth-devise": "~0.8.0",
+    "ember-cli-simple-auth": "0.8.0",
+    "ember-cli-simple-auth-devise": "0.8.0",
     "ember-cli-uglify": "~1.0.1",
     "ember-data": "1.13.8",
     "ember-disable-proxy-controllers": "~1.0.0",
     "ember-export-application-global": "~1.0.2",
     "ember-validations": "2.0.0-alpha.4"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
